--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-        This is a Test website.
+        <h1>This is a Test website.</h1>
         </title>
     </head>
 <body>
