--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div id="banner-bottom" class="container">
                 <div class="box-left">
                     <h2>Subscribe me on Youtube.</h2>
-                    <span>Your on subscription will motivate me to work hard. Off course its free.</span> </div>
+                    <span>Your one subscription will motivate me to work hard. Off course its free.</span> </div>
                 <div class="box-right"> <a href="https://www.youtube.com/c/CodeWar?sub_confirmation=1" class="button button-big">Subscribe</a></div>
             </div>
         </div>
